WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
48941
[Qt] TestController::runUntil doesn't honor the timeout parameter
https://bugs.webkit.org/show_bug.cgi?id=48941
Summary
[Qt] TestController::runUntil doesn't honor the timeout parameter
Adam Roben (:aroben)
Reported
2010-11-03 12:39:48 PDT
In order to fix
bug 43047
I'm adding a timeout parameter to TestController::runUntil. The parameter specifies how long we are willing to run the run loop before giving up. TestControllerQt should honor this parameter.
Attachments
Patch
(3.08 KB, patch)
2010-11-11 12:09 PST
,
Benjamin Poulain
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Benjamin Poulain
Comment 1
2010-11-11 12:09:11 PST
Created
attachment 73634
[details]
Patch
WebKit Commit Bot
Comment 2
2010-11-12 03:31:09 PST
Comment on
attachment 73634
[details]
Patch Clearing flags on attachment: 73634 Committed
r71902
: <
http://trac.webkit.org/changeset/71902
>
WebKit Commit Bot
Comment 3
2010-11-12 03:31:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug